# flat_string

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  tests.rs
